--- a/styles.css
+++ b/styles.css
@@ -28,16 +28,88 @@ html {
 --rose800: hsl(332, 51%, 32%);
 --rose50: hsl(330, 100%, 98%);
 }
-.attribution {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
 body {
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     min-height: 100svh;
+    padding: 16px;
+    background-color: var(--stone100);
+    font-weight: 400;
+    font-family: 'Outfit', sans-serif;
+}
+.wrapper {
+    padding: 30px;
+    border-radius: 15px;
+    background-color: white;
+    max-width: 38rem;
+    margin-bottom: 20px;
+}
+img {
+    border-radius:15px;
+    display: block;
+    width: 100%;
+}
+h1, h2 {
+    font-family: 'Young Serif', sans-serif;
+    font-weight: inherit;
+}
+h1 {
+    color: var(--stone900);
+}
+h2 {
+    color: var(--brown800);
+}
+.short-description, p {
+    color: var(--stone600);
+    font-size: 0.85rem;
+}
+.prepTime {
+    background-color: var(--rose50);
+    padding: 20px;
+    margin-top: 30px;
+    border-radius: 15px;
+}
+.prepTitle {
+    color: var(--rose800);
+    font-weight: 600;
+    font-family: 'Outfit', sans-serif;
+    font-size: 1.1rem;
+}
+ul {
+    margin-bottom: 0px;
+    padding-left: 20px;
+}
+ul li {
+    padding-left: 15px;
+    color: var(--stone600);
+    font-size: 0.9rem;
+    margin-top: 10px;
+}
+ul li::marker {
+    color: var(--rose800);
+    font-size: .8rem;
+}
+.bold {
+    font-weight: 600;
+}
+hr {
+    margin: 25px 0;
+    border-bottom-width: 0px;
+}
+ol {
+    margin-bottom: 0px;
+    padding-left: 20px;
+}
+ol li {
+    padding-left: 15px;
+    color: var(--stone600);
+    font-size: 0.9rem;
+    margin-top: 10px;
+}
+ol li::marker {
+    color: var(--brown800);
+    font-weight: 600;
 }
